--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,91 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+    ></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Walmex Challenge</title>
-</head>
-<body>
-    Fill me in :)
-</body>
+  </head>
+  <body>
+    <div class="container-md">
+      <h1>All Users</h1>
+      <p>Users and their age</p>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Username</th>
+            <th>Age</th>
+          </tr>
+        </thead>
+        <tbody id="users"></tbody>
+      </table>
+    </div>
+
+    <div class="container-md">
+      <h1>Age Demographic of Users With ___</h1>
+      <select id="items" class="btn btn-primary btn-sm dropdown-toggle">
+        <option value="" disabled selected hidden>Item</option>
+        <option value="carrot">carrot</option>
+        <option value="apple">apple</option>
+        <option value="grapes">grapes</option>
+        <option value="cake">cake</option>
+        <option value="tv">tv</option>
+        <option value="crackers">crackers</option>
+        <option value="chips">chips</option>
+        <option value="ham">ham</option>
+      </select>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Age</th>
+            <th>Count</th>
+          </tr>
+        </thead>
+        <tbody id="groups"></tbody>
+      </table>
+    </div>
+  </body>
+  <script>
+    $.ajax({
+      url: "/users",
+      success: (users) => {
+        users = JSON.parse(users);
+        for (let user of users) {
+          const td1 = $("<td></td>").text(user.username);
+          const td2 = $("<td></td>").text(user.age);
+          const tr = $("<tr></tr>").append(td1, td2);
+          $("#users").append(tr);
+        }
+      },
+    });
+
+    $("#items").change(function () {
+      $("#groups").empty();
+      const $option = $(this).find("option:selected");
+      const value = $option.val();
+      if (!value) return;
+      $.ajax({
+        url: `/users/age?item=${value}`,
+        success: (groups) => {
+          groups = JSON.parse(groups);
+          for (let group of groups) {
+            const td1 = $("<td></td>").text(group.age);
+            const td2 = $("<td></td>").text(group.count);
+            const tr = $("<tr></tr>").append(td1, td2);
+            $("#groups").append(tr);
+          }
+        },
+      });
+    });
+  </script>
 </html>
